# first_flask_application

./: app.py  pyproject.toml
src/forms/: em_accessform.py  volunteerfrom.py
static/css/: main.css
templates/: base.html  em_access_form.html  prof_list.html  training_info.html  vol_form_info.html  volunteerform.html
