[tool.poetry]
name = "first_flask_application"
version = "0.1.0"
description = ""
authors = ["Irishery <markirill21@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
